{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 21,
  "lineage": "87165a98-b824-9c08-11f1-26ace8590404",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "testing-app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909741523:internet-gateway/igw-084622cdaa285b532",
            "id": "igw-084622cdaa285b532",
            "owner_id": "337909741523",
            "tags": {
              "Name": "testing-app-igw"
            },
            "tags_all": {
              "Name": "testing-app-igw"
            },
            "vpc_id": "vpc-02a07a0a8d8518f05"
          },
          "dependencies": [
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "testing-app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:337909741523:loadbalancer/app/testing-app-alb/f61d8d2d577e9dbd",
            "arn_suffix": "app/testing-app-alb/f61d8d2d577e9dbd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "testing-app-alb-1387327438.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:337909741523:loadbalancer/app/testing-app-alb/f61d8d2d577e9dbd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "testing-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0012c7c29de00ec34"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00eb22bf87b9e2fa9"
              },
              {
                "subnet_id": "subnet-09a946fd14763b863"
              }
            ],
            "subnets": [
              "subnet-00eb22bf87b9e2fa9",
              "subnet-09a946fd14763b863"
            ],
            "tags": {
              "Name": "testing-app-alb"
            },
            "tags_all": {
              "Name": "testing-app-alb"
            },
            "vpc_id": "vpc-02a07a0a8d8518f05",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.testing-app_alb_sg",
            "aws_subnet.testing-app_public_1",
            "aws_subnet.testing-app_public_2",
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "testing-app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:337909741523:listener/app/testing-app-alb/f61d8d2d577e9dbd/ff44808fe8542103",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:337909741523:targetgroup/testing-app-tg/d9d51f2c922dec37",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:337909741523:listener/app/testing-app-alb/f61d8d2d577e9dbd/ff44808fe8542103",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:337909741523:loadbalancer/app/testing-app-alb/f61d8d2d577e9dbd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.testing-app_alb",
            "aws_lb_target_group.testing-app_tg",
            "aws_security_group.testing-app_alb_sg",
            "aws_subnet.testing-app_public_1",
            "aws_subnet.testing-app_public_2",
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "testing-app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:337909741523:targetgroup/testing-app-tg/d9d51f2c922dec37",
            "arn_suffix": "targetgroup/testing-app-tg/d9d51f2c922dec37",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:337909741523:targetgroup/testing-app-tg/d9d51f2c922dec37",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "testing-app-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "testing-app-tg"
            },
            "tags_all": {
              "Name": "testing-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02a07a0a8d8518f05"
          },
          "dependencies": [
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "testing-app_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909741523:route-table/rtb-0e1f0b89f9e912961",
            "id": "rtb-0e1f0b89f9e912961",
            "owner_id": "337909741523",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-084622cdaa285b532",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "testing-app-public-rt"
            },
            "tags_all": {
              "Name": "testing-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a07a0a8d8518f05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.testing-app_igw",
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "testing-app_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005fc1e17c9703d9d",
            "route_table_id": "rtb-0e1f0b89f9e912961",
            "subnet_id": "subnet-09a946fd14763b863"
          },
          "dependencies": [
            "aws_internet_gateway.testing-app_igw",
            "aws_route_table.testing-app_public_rt",
            "aws_subnet.testing-app_public_1",
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "testing-app_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0275e51093d4112f5",
            "route_table_id": "rtb-0e1f0b89f9e912961",
            "subnet_id": "subnet-00eb22bf87b9e2fa9"
          },
          "dependencies": [
            "aws_internet_gateway.testing-app_igw",
            "aws_route_table.testing-app_public_rt",
            "aws_subnet.testing-app_public_2",
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "testing-app_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909741523:security-group/sg-0012c7c29de00ec34",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0012c7c29de00ec34",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "testing-app-alb-sg",
            "name_prefix": "",
            "owner_id": "337909741523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-app-alb-sg"
            },
            "tags_all": {
              "Name": "testing-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a07a0a8d8518f05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "testing-app_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909741523:security-group/sg-0cd25bf046e5a8a19",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd25bf046e5a8a19",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0012c7c29de00ec34"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "testing-app-ecs-sg",
            "name_prefix": "",
            "owner_id": "337909741523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-app-ecs-sg"
            },
            "tags_all": {
              "Name": "testing-app-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a07a0a8d8518f05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.testing-app_alb_sg",
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testing-app_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909741523:subnet/subnet-09a946fd14763b863",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a946fd14763b863",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337909741523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-app-public-1"
            },
            "tags_all": {
              "Name": "testing-app-public-1"
            },
            "vpc_id": "vpc-02a07a0a8d8518f05"
          },
          "dependencies": [
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testing-app_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909741523:subnet/subnet-00eb22bf87b9e2fa9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00eb22bf87b9e2fa9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337909741523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-app-public-2"
            },
            "tags_all": {
              "Name": "testing-app-public-2"
            },
            "vpc_id": "vpc-02a07a0a8d8518f05"
          },
          "dependencies": [
            "aws_vpc.testing-app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testing-app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909741523:vpc/vpc-02a07a0a8d8518f05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09778a59ae5bb734a",
            "default_route_table_id": "rtb-07768041de299fbec",
            "default_security_group_id": "sg-044cd337f4ce56d72",
            "dhcp_options_id": "dopt-0ddd866efbec92b4e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a07a0a8d8518f05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07768041de299fbec",
            "owner_id": "337909741523",
            "tags": {
              "Name": "testing-app-vpc"
            },
            "tags_all": {
              "Name": "testing-app-vpc"
            }
          }
        }
      ]
    }
  ]
}